# src/app/controllers/users/group.controller.ts
@@ -1,7 +1,6 @@
 import { Controller, Get, Path, Delete, Post, Put } from "tsoa"
 import { Body, Query, Route, SuccessResponse, Security, Tags } from "tsoa"
-import { CreateGroupParams, UpdateGroupParams, IGroupDetail, IGroupList } from "../../dtos"
-import { Group } from "../../models"
+import { CreateGroupDto, UpdateGroupDto, GroupDetailDto, GroupListDto, GroupDto } from "../../dtos"
 import { groupService } from "../../services"
 
 @Route("api/v1/users/groups")
@@ -9,7 +8,7 @@ import { groupService } from "../../services"
 export class RoleController extends Controller {
   @Get("{id}")
   @Security("jwt", ["groups:read"])
-  public async getGroupDetail(@Path() id: number): Promise<IGroupDetail> {
+  public async getGroupDetail(@Path() id: number): Promise<GroupDetailDto> {
     return await groupService.getGroupDetail(id)
   }
 
@@ -17,8 +16,8 @@ export class RoleController extends Controller {
   @Security("jwt", ["groups:update"])
   public async updateGroup(
     @Path() id: number,
-    @Body() item: UpdateGroupParams
-  ): Promise<IGroupDetail> {
+    @Body() item: UpdateGroupDto
+  ): Promise<GroupDetailDto> {
     return await groupService.updateGroup(id, item)
   }
 
@@ -27,21 +26,21 @@ export class RoleController extends Controller {
     @Query() page = 1,
     @Query() perPage = 100,
     @Query() isActive = true
-  ): Promise<IGroupList> {
+  ): Promise<GroupListDto> {
     return await groupService.getGroupList(page, perPage, isActive)
   }
 
   @Post()
   @SuccessResponse("201", "Created")
   @Security("jwt", ["groups:create"])
-  public async createGroup(@Body() item: CreateGroupParams): Promise<Group> {
+  public async createGroup(@Body() item: CreateGroupDto): Promise<GroupDetailDto> {
     this.setStatus(201)
     return await groupService.createGroup(item)
   }
 
   @Delete("{id}")
   @Security("jwt", ["groups:delete"])
-  public async deleteGroup(@Path() id: number): Promise<Group> {
+  public async deleteGroup(@Path() id: number): Promise<GroupDto> {
     return await groupService.deleteGroup(id)
   }
 }
